# rust_to_glsl_lint

./: Cargo.toml  README.md
src/: attribute.rs  lib.rs  optimize.rs  shader.rs  structure.rs  util.rs
src/converter/: config.rs  expr.rs  interface.rs  mod.rs
tests/: expected.glsl  lib.rs
